nest doi in dataset in /api/version
No longer use api call for version on about page, but use the version of the app.
